various content / layout changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,13 @@
 
 </div>
 
+<div id="footer">
+<p>Norwich Bicycle Repair Co-operative Ltd is a fully mutual workers' co-op 
+registered as a Company Ltd by Guarantee in England and Wales, registration number No. 8789116.   
+Registered address: 74 Irstead Rd, Norwich, NR5 8AR
+VAT number 177 7424 72</p>
+</div>
+
 </body>
 </html>
 
