--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,16 +1,12 @@
 body {
-    background-color: #eef;
+    background-color: #fff;
     font-family: sans-serif;
     padding: 0px;
     margin: 0px;
 }
 
 #masthead {
-    background-color: #456;
-    background: linear-gradient(18deg, #456, #bbc);
-    color: #fbfbff;
     padding: 0.5em;
-    border-bottom: 2px solid #113;
 }
 
 #masthead h2 {
@@ -19,23 +15,26 @@ body {
 }
 
 #masthead h2 a {
-    color: #fbfbff;
+    /*color: #fbfbff;*/
     text-decoration:none;
+    color: #5c2680;
 }
 
 #content {
     max-width:800px;
     padding: 1em;
     background-color: #fff;
+    padding-top: 0em;
     padding-right: 3%;
-    padding-bottom: 100px;
-    border-right: 1px solid #ccd;
-    border-bottom: 1px solid #ccd;
+    padding-bottom: 50px;
     color: #113;
     margin-left: auto;
     margin-right: auto;
 }
 
+#content h1, #content h2 {
+    color: #5c2680;
+}
 
 #content p, #content ul {
  line-height: 1.6em;
@@ -61,15 +60,20 @@ blockquote a {
 #top-menu ul {
     background-color: #5c2680;
     padding: 5px 4px 5px 4px;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
 }
 
 #top-menu ul li {
     display:inline;
-    /*background-color: #432;*/
     padding: 2px 10px 2px 4px;
-    border-color: #000;
-    border-width: 0px 2px 0px 0px;
+    border-color: #aaa;
+    border-width: 0px 1px 0px 0px;
     border-style: solid;
+}
+
+#top-menu ul li:last-child {
+    border-style: none;
 }
 
 #top-menu ul li a {
@@ -86,9 +90,26 @@ blockquote a {
     -moz-border-radius: 15px;
     border-radius: 15px;
     margin-left: 1em;
-    font-size: 85%;
+    font-size: 90%;
+}
+
+#content .sidebar h1 {
+    color: #fff;
+    font-size: 1.4em;
 }
 
 .sidebar a {
     color:#fff;
+}
+
+.sidebar ul {
+    padding-left: 18px;
+}
+
+#footer {
+    margin-left: 8%;
+    margin-right: 8%;
+    border-top: 1px solid #368;
+    font-style: italic;
+    color: #5c2680;
 }
