--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,8 @@
             <li><a href="/jobs/">Jobs</a></li>
             <li><a href="/about-us/">About us</a></li>
             <li><a href="/downloads/">Downloads</a></li>
-            
+            <li><a href="/resources-information/">Resources & Information</a></li>
+		
         </ul>
     </div>
 </div>
