--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
 <div id="footer">
 <p>Norwich Bicycle Repair Co-operative Ltd is a fully mutual workers' co-op 
 registered as a Company Ltd by Guarantee in England and Wales, registration number No. 8789116.   
-Registered address: 74 Irstead Rd, Norwich, NR5 8AR
+Registered address: 20 Savery Close, Norwich, Norfolk, NR5 8NJ
 VAT number 177 7424 72</p>
 </div>
 
