--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/dr-bike-uea/">Dr Bike @ UEA</a></li>
+	    <li><a href="/bikes-for-sale/">Bikes for Sale</a></li>
             <li><a href="/jobs/">Jobs</a></li>
             <li><a href="/about-us/">About us</a></li>
 	    <li><a href="/downloads/">Downloads</a></li>
