--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
             <li><a href="/dr-bike-uea/">Dr Bike @ UEA</a></li>
 	    <li><a href="/bikes-for-sale/">Bikes for Sale</a></li>
             <li><a href="/jobs/">Jobs</a></li>
+	    <li><a href="/workshops/">Workshops</a></li>
             <li><a href="/about-us/">About us</a></li>
 	    <li><a href="/downloads/">Downloads</a></li>
             <li><a href="/resources-information/">Resources & Information</a></li>
